add gradient on first page.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 
         </div>
     </section>
+    <div class="pageOneBackColor"></div>
 
 
     <script src="script.js"></script>
