add responsiveness to more pages

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <section class="pageThree">
         <div class="page3Head">
             <p style="font-size: 50px; font-weight: 600; margin: 0; width: 400px;">What Sets Us Apart</p>
-            <p style="width: 400px; margin: 0; line-height: 26px; color: #A6A6A6; font-size: 18px;">We are more than just an agency; we are your strategic partner in navigating the complexities of the digital landscape.</p>
+            <p style="width: 300px; margin: 0; line-height: 26px; color: #A6A6A6; font-size: 18px;">We are more than just an agency; we are your strategic partner in navigating the complexities of the digital landscape.</p>
             <button class="quotebutton" style="align-self: center;">Book a Call</button>
         </div>
 
@@ -119,20 +119,20 @@
             <div class="card2">
                 <!-- <div style="height: 330px; width: 325px; background-color: rgb(190, 170, 170);"></div> -->
                 <img src="./resources/p301.png" style="height: 330px; width: 325px">
-                <p style="margin: 0; font-size: 30px;">Strategic innovations</p>
-                <p style="margin: 0; color: #A6A6A6;">We don't just provide solutions; we craft strategies that position your business for sustained success.</p>
+                <p style="margin: 0; font-size: 30px; text-align: center;">Strategic innovations</p>
+                <p style="margin: 0; color: #A6A6A6; text-align: center;">We don't just provide solutions; we craft strategies that position your business for sustained success.</p>
             </div>
 
             <div class="card2">
-                <div style="height: 330px; width: 325px; background-color: rgba(255, 0, 0, 0.206);"></div>
-                <p style="margin: 0; font-size: 30px;">Client-Centric Approach</p>
-                <p style="margin: 0; color: #A6A6A6;">Our client-centric methodology revolves around understanding your unique challenges, goals, and vision.</p>
+                <img src="./resources/p302.png" style="height: 330px; width: 325px">
+                <p style="margin: 0; font-size: 30px; text-align: center;">Client-Centric Approach</p>
+                <p style="margin: 0; color: #A6A6A6; text-align: center;">Our client-centric methodology revolves around understanding your unique challenges, goals, and vision.</p>
             </div>
 
             <div class="card2">
-                <div style="height: 330px; width: 325px; background-color: rgb(209, 146, 146);"></div>
-                <p style="margin: 0; font-size: 30px;">Use Of AI</p>
-                <p style="margin: 0; color: #A6A6A6;">We leverage the power of AI across our services, we elevate the efficiency, and innovation of our solutions</p>
+                <img src="./resources/p303.png" style="height: 330px; width: 325px">
+                <p style="margin: 0; font-size: 30px; text-align: center;">Use Of AI</p>
+                <p style="margin: 0; color: #A6A6A6; text-align: center;">We leverage the power of AI across our services, we elevate the efficiency, and innovation of our solutions</p>
             </div>
         </div>
     </section>
@@ -140,7 +140,7 @@
     <section class="pageFour">
         <p style="font-size: 30px; font-weight: 600;">What our Clients Say</p>
 
-        <div style="display: flex; gap:70px">
+        <div style="display: flex; gap:70px" class="reviews">
             <img src="./resources/Col.png" style="width: 390px;">
             <div style="display: flex; flex-direction: column; width: 400px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
