--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="34" viewBox="0 0 487 34" fill="none">
                 <path d="M4 30C73.6307 10.3798 266.914 -17.0885 483 30" stroke="#7BC7E2" stroke-width="8" stroke-linecap="round"/>
               </svg>
-            <p style="margin-bottom: 30px; color: #0F172A; width: 100%; min-width: 320px; display: inline-block; line-height: 25px;"> JSRLEADS is a Digital Marketing and Business Solutions company,
+            <p style="margin-bottom: 30px; color: #0F172A; width: 100%; min-width: 280px; display: inline-block; line-height: 25px;"> JSRLEADS is a Digital Marketing and Business Solutions company,
                 dedicated to Empowering businesses for sustainable growth with innovative 
                 marketing and tailored solutions. 
                 Stand out in today's competitive market.</p>
@@ -51,7 +51,7 @@
     <section class="pageTwo">
         <img src="./resources/bg1.png"  >
         <div class="personalized">
-            <h2 style="font-size: 50px; margin-top: 0; margin-bottom: 30px;">Personalized services</h2>
+            <h2 style="font-size: 40px; margin-top: 0; margin-bottom: 30px;">Personalized services</h2>
             <p style="line-height: 30px;">Our tailored approach ensures a customised and effective solution for every business, fostering long-term success</p>
         </div>
         <div class="cardsContainer">
@@ -140,9 +140,9 @@
     <section class="pageFour">
         <p style="font-size: 30px; font-weight: 600;">What our Clients Say</p>
 
-        <div style="display: flex; gap:70px" class="reviews">
-            <img src="./resources/Col.png" style="width: 390px;">
-            <div style="display: flex; flex-direction: column; width: 400px;">
+        <div style="display: flex; gap:70px; width: 100%; align-items: center; justify-content: center;" class="reviews">
+            <img src="./resources/Col.png" >
+            <div style="display: flex; flex-direction: column; max-width: 400px; width: 80%;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
                     <g opacity="0.5">
                     <path d="M45.3125 25H37.5V18.75C37.5 15.3027 40.3027 12.5 43.75 12.5H44.5312C45.8301 12.5 46.875 11.4551 46.875 10.1562V5.46875C46.875 4.16992 45.8301 3.125 44.5312 3.125H43.75C35.1172 3.125 28.125 10.1172 28.125 18.75V42.1875C28.125 44.7754 30.2246 46.875 32.8125 46.875H45.3125C47.9004 46.875 50 44.7754 50 42.1875V29.6875C50 27.0996 47.9004 25 45.3125 25ZM17.1875 25H9.375V18.75C9.375 15.3027 12.1777 12.5 15.625 12.5H16.4062C17.7051 12.5 18.75 11.4551 18.75 10.1562V5.46875C18.75 4.16992 17.7051 3.125 16.4062 3.125H15.625C6.99219 3.125 0 10.1172 0 18.75V42.1875C0 44.7754 2.09961 46.875 4.6875 46.875H17.1875C19.7754 46.875 21.875 44.7754 21.875 42.1875V29.6875C21.875 27.0996 19.7754 25 17.1875 25Z" fill="#878787"/>
@@ -151,7 +151,7 @@
 
                 <p style="margin-left: 30px; width: 80%; line-height: 25px; color: #A6A6A6;">"The team at JSRLEADS exceeded our expectations in developing a bespoke website. Their attention to detail and responsiveness were remarkable. Their personalized services truly set them apart in the digital marketing landscape."</p>
 
-                <p style="margin-left: 30px; font-weight: 600;">Lana Rhodes</p>
+                <p style="margin-left: 30px; font-weight: 600;">-Lana Rhodes</p>
 
                 <div></div>
             </div>
